--- a/BlinkDetector/app/src/main/res/values/strings.xml
+++ b/BlinkDetector/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Blink Detector</string>
     <string name="bt_button">Connect device</string>
     <string name="start_button">Start</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
