--- a/BlinkDetector/app/src/main/res/values/strings.xml
+++ b/BlinkDetector/app/src/main/res/values/strings.xml
@@ -4,17 +4,18 @@
 
     <!--  Bluetooth -->
     <string name="send">Send</string>
-    <string name="start">Record blinking</string>
+    <string name="start">Record</string>
     <string name="stop">Stop</string>
     <string name="not_connected">You are not connected to a device</string>
     <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Blink Detector</string>
+    <string name="device_not_connected">Bluetooth Device connection failed</string> device_not_connected
     <string name="title_connecting">connecting...</string>
     <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
     <string name="title_not_connected">not connected</string>
 
     <!--  DeviceListActivity -->
-    <string name="scanning">scanning for devices...</string>
-    <string name="select_device">select a device to connect</string>
+    <string name="scanning">Scanning for devices...</string>
+    <string name="select_device">Select a device to connect</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
     <string name="title_paired_devices">Paired Devices</string>
